Corregido nombre del problema C y tamaño de letra del documento

--- a/2007/ProblemC.tex
+++ b/2007/ProblemC.tex
@@ -1,11 +1,11 @@
-\documentclass[a4paper,10pt]{article}
+\documentclass[a4paper,12pt]{article}
 
 \usepackage{ucs}
 \usepackage[utf8x]{inputenc}
 
 \usepackage{url}
 \usepackage[spanish]{babel}
-\title{Competencia de Placas de Carros}
+\title{Problema C: Competencia de Placas de Carros}
 \author{traducido por: Alfredo Paz-Valderrama}
 \date{}
 \begin{document}
