--- a/wiki/EnunciadosDatosOficiales.wiki
+++ b/wiki/EnunciadosDatosOficiales.wiki
@@ -7,6 +7,6 @@
   * [http://maratona.ime.usp.br/hist/2006/final/contest/contest2006_v4_sin_sout.pdf Problemas]
   * [http://www.ucsp.edu.pe/~apaz/testset_2006_unix.zip Datos de prueba (UNIX)]
 == 2007 ==
-  * [http://www.ic.unicamp.br/~acmcntst/Welcome_files/contest2007_v8.pdf Problemas] (http://www.ic.unicamp.br/~acmcntst/Welcome_files/contest2007_v8.pdf)
-  * [http://www.ic.unicamp.br/~acmcntst/Welcome_files/testset_2007_dos_v1.zip Datos de prueba (DOS)] (http://www.ic.unicamp.br/~acmcntst/Welcome_files/testset_2007_dos_v1.zip)
-  * [http://www.ic.unicamp.br/~acmcntst/Welcome_files/testset_2007_unix_v1.zip Datos de prueba (UNIX)] (http://www.ic.unicamp.br/~acmcntst/Welcome_files/testset_2007_unix_v1.zip)
+  * [http://www.ic.unicamp.br/~acmcntst/Welcome_files/contest2007_v8.pdf Problemas] 
+  * [http://www.ic.unicamp.br/~acmcntst/Welcome_files/testset_2007_dos_v1.zip Datos de prueba (DOS)] 
+  * [http://www.ic.unicamp.br/~acmcntst/Welcome_files/testset_2007_unix_v1.zip Datos de prueba (UNIX)]
